# realisim

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  FUCKING HOW TO.txt  macro_component.cmake  readme.txt  sargamReleaseNotes-preprod.txt  sargamReleaseNotes.txt
projects/: CMakeLists.txt
projects/RealEdit/: CMakeLists.txt  Controller.cpp  Controller.h  RealEditController.cpp  RealEditController.h  images.qrc  main.cpp
projects/RealEdit/DataModel/: DataModel.cpp  DataModel.h  DisplayData.cpp  DisplayData.h  EditionData.cpp  EditionData.h  ObjectNode.cpp  ObjectNode.h
projects/RealEdit/UserInterface/: AnimationUi.h  EditionUi.cpp  EditionUi.h  MainWindow.cpp  MainWindow.h  ObjectNavigator.cpp  ObjectNavigator.h  ProjectWindow.cpp  ProjectWindow.h  RealEdit3d.cpp  RealEdit3d.h  WorkspaceUi.cpp  WorkspaceUi.h
projects/RealEdit/commands/: addNode.cpp  addNode.h  changeMode.cpp  changeMode.h  changeNode.cpp  changeTool.cpp  changeTool.h  commands, changeMode.cpp  commands, changeNode.cpp  commands, changeTool.cpp  commands, changeTool.h  commands, selection.cpp  commands, selection.h  commands, translate.h  extrude.h  remove.h  removeNode.h  renameNode.cpp  renameNode.h  select.h  translate.cpp
projects/sargam/: CMakeLists.txt  Commands.cpp  Commands.h  Dialogs.cpp  Dialogs.h  MainDialog.cpp  MainDialog.h  PartitionViewer.cpp  PartitionViewer.h  ThinLineEdit.cpp  ThinLineEdit.h  Updater.cpp  Updater.h  buildAndDeployMac.sh  data.cpp  data.h  main.cpp  notes
projects/sargam/releaseNotes/: sargamReleaseNotes-preprod.txt  sargamReleaseNotes.txt
projects/sargam/taches.oo3/: contents.xml
projects/sargam/web/: notes.txt
projects/spriteEditor/: CMakeLists.txt  MainDialog.cpp  MainDialog.h
projects/web/mechoui2014/: index.php  uploadProgress.php
prototypes/: CMakeLists.txt
prototypes/LeMur/22 avril 2012/: mur-ajoute.php  mur.html
prototypes/LeMur/4 mars 2012/: index.html
prototypes/LeMur/4 mars 2012 (2)/: mur-ajoute.php
prototypes/LeMur/5 mars 2012/: mur.html
prototypes/LeMur/aFaire.oo3/: contents.xml
prototypes/LeMur/phase1/: mur-ajoute.php  mur-maj.php
prototypes/LeMur/phase2WebGl/: mur-maj.php  mur.html
prototypes/Matrix4/: main.cpp
prototypes/OpenFlightViewer/: Broker.cpp  Broker.h  CMakeLists.txt  Definitions.cpp  Definitions.h  FileStreamer.cpp  FileStreamer.h  FltImporter.cpp  FltImporter.h  GpuStreamer.cpp  GpuStreamer.h  Hub.cpp  Hub.h  ImageLoader.cpp  ImageLoader.h  MainDialog.cpp  MainDialog.cpp.bak  MainDialog.h  MessageQueue.cpp  MessageQueue.h  Representations.cpp  Representations.cpp.bak  Representations.h  Scene.cpp  Scene.h
prototypes/OpenFlightViewer/openFlight/: OpenFlightReader.cpp  OpenFlightReader.h
prototypes/RealTraycer/: RealTraycerSol.sln
prototypes/RealTraycer/RealTraycer/: DataReader.cs  Light.cs  RealTraycer.csproj
prototypes/SDI/: AnimationUi.cpp  AnimationUi.h  CMakeLists.txt  EditionUi.cpp  EditionUi.h  MainWindow.h  ProjectSelectionUi.cpp  ProjectSelectionUi.h  UiController.cpp  main.cpp
prototypes/SMAA/: CMakeLists.txt  MainDialog.cpp  MainDialog.h
prototypes/VertexBufferObject/: CMakeLists.txt  MainDialog.cpp  MainDialog.h
prototypes/bezierCurve/: CMakeLists.txt  MainDialog.cpp  MainDialog.h
prototypes/bloom/: CMakeLists.txt  MainDialog.cpp  MainDialog.h
prototypes/camera/: CMakeLists.txt  MainDialog.cpp  MainDialog.h
prototypes/chat/: CMakeLists.txt
prototypes/command/: CMakeLists.txt  MainDialog.h
prototypes/engine3d/: Broker.cpp  Broker.h  CMakeLists.txt  Conversion.cpp  Conversion.h  Core.cpp  Core.h  Hub.cpp  Hub.h  InputHandler.h  MainDialog.cpp  MainDialog.h  SceneManagement.cpp  SceneManagement.h  main.cpp
prototypes/frameBuffer/: CMakeLists.txt  MainDialog.cpp
prototypes/genese/: MainDialog.cpp  images.qrc
prototypes/imageFilter/: CMakeLists.txt  MainDialog.cpp  convolution.frag  shaders.qrc  windowing.frag
prototypes/network/: CMakeLists.txt
prototypes/networkClient/: CMakeLists.txt  Widget.h
prototypes/networkServer/: Widget.h  main.cpp
prototypes/particuleSystem/: CMakeLists.txt  MainDialog.cpp  ParticuleSystem.h  Viewer.cpp  Viewer.h  images.qrc  particuleSystem.cl - copie
prototypes/particuleSystem2/: MainDialog.cpp  MainDialog.h
prototypes/platform/: CMakeLists.txt  EditorCommands.cpp  Engine.cpp  Engine.h  GameEntity.cpp  GameEntity.h  MainDialog.cpp  MainDialog.h  MainWindow.cpp  MainWindow.h  Physics.cpp  Physics.h
prototypes/polygones/: MainDialog.cpp  MainDialog.h
prototypes/pong/: CMakeLists.txt  GameObject.h  GameWindow.cpp  GameWindow.h  Network.cpp  Network.h  images.qrc  main.cpp
prototypes/rayCasting/: CMakeLists.txt  MainDialog.cpp  MainDialog.h  main.cpp  raycast - copie 2.frag  raycast - copie.frag  raycast.frag  raycast.vert  shaders.qrc
prototypes/remoteDesktop/: CMakeLists.txt  MainDialog.cpp  MainDialog.h
prototypes/shader/: MainDialog.cpp  MainDialog.h  directional lighting.frag  directional lighting.vert  main with light.frag  noise.frag  toon.frag
prototypes/sharkTank/: CMakeLists.txt  coreLibrary, glCamera.cpp  coreLibrary, glCamera.h  coreLibrary, glSceneGraph.cpp  coreLibrary, glSceneGraph.h  coreLibrary, glViewer.cpp  coreLibrary, glViewer.h  coreLibrary, intersection.cpp  coreLibrary, intersection.h  coreLibrary, primitives.cpp  coreLibrary, primitives.h  engine.cpp  engine.h  main.cpp  mainWindow.cpp  mainWindow.h  utilities3d.cpp  utilities3d.h
prototypes/soundTest/: CMakeLists.txt  MainDialog.cpp  MainDialog.h
prototypes/spaceTime/: CMakeLists.txt  Engine.cpp  Engine.h  MainWindow.cpp  MainWindow.h  Viewer.cpp  Viewer.h  main.cpp  tites notes.rtf
prototypes/statistics/: CMakeLists.txt  main.cpp
prototypes/template3d/: CMakeLists.txt  MainDialog.cpp  MainDialog.h
prototypes/texte_et_texture/: CMakeLists.txt  MainDialog.cpp  images.qrc
prototypes/volumetricLighting/: CMakeLists.txt  MainDialog.h
reusables/3d/: Camera.cpp  (+33 more)
trunk/: CMakeLists.txt  macro_component.cmake  readme.txt
trunk/notes/: Deploy Qt applications for Mac OS X   dragly.html
trunk/projects/: CMakeLists.txt
trunk/prototypes/: CMakeLists.txt
(+446 files in other folders)
