# PROJECTS CMAKELISTS

IF( REALEDIT_BUILDOPTION )
   SET(QT_USE_QTOPENGL 1)
   ADD_SUBDIRECTORY( RealEdit )
ENDIF( REALEDIT_BUILDOPTION )

IF( SPRITEEDITOR_BUILDOPTION )
   ADD_SUBDIRECTORY( spriteEditor )
ENDIF( SPRITEEDITOR_BUILDOPTION )

IF( REMOTEDESKTOP_BUILDOPTION )
   ADD_SUBDIRECTORY( remoteDesktop )
ENDIF( REMOTEDESKTOP_BUILDOPTION )

IF( SARGAM_BUILDOPTION )
   ADD_SUBDIRECTORY( sargam )
ENDIF( SARGAM_BUILDOPTION )