#PROTOTYPES CMAKELISTS

IF( PROTOTYPES_BUILDOPTION )
   #ADD_SUBDIRECTORY( bezierCurve )
   #ADD_SUBDIRECTORY(chat)
   #ADD_SUBDIRECTORY( command )
   #ne compile plus a cause de chipmunk ADD_SUBDIRECTORY(pong)
   #ADD_SUBDIRECTORY(frameBuffer)
   #ADD_SUBDIRECTORY(genese)
   #ADD_SUBDIRECTORY(imageFilter)
   #ADD_SUBDIRECTORY(particuleSystem)
   #ADD_SUBDIRECTORY(particuleSystem2)
   #ADD_SUBDIRECTORY(polygones)
   #ne compile plusADD_SUBDIRECTORY( SDI )
   #ADD_SUBDIRECTORY( qtableTest )
   #ADD_SUBDIRECTORY(rayCasting)
   #ADD_SUBDIRECTORY(shader)
   #ADD_SUBDIRECTORY( spaceTime )
   #ADD_SUBDIRECTORY( texte_et_texture )
   #ADD_SUBDIRECTORY( platform )
ENDIF( PROTOTYPES_BUILDOPTION )