#PROTOTYPES CMAKELISTS

IF( PROTOTYPES_BUILDOPTION )
   #ADD_SUBDIRECTORY( command )
   #ADD_SUBDIRECTORY(pong)
   ADD_SUBDIRECTORY(shader)
   #ADD_SUBDIRECTORY(networkClient)
   #ADD_SUBDIRECTORY(networkServer)
   #ne compile plusADD_SUBDIRECTORY( SDI )
   #ADD_SUBDIRECTORY( qtableTest )
ENDIF( PROTOTYPES_BUILDOPTION )