#PROTOTYPES CMAKELISTS

IF( PROTOTYPES_BUILDOPTION )
   #ADD_SUBDIRECTORY( command )
   #ADD_SUBDIRECTORY(pong)
   #ADD_SUBDIRECTORY(shader)
   #ADD_SUBDIRECTORY(rayCasting)
   #ADD_SUBDIRECTORY(frameBuffer)
   ADD_SUBDIRECTORY(genese)
   #ADD_SUBDIRECTORY(particuleSystem)
   #ADD_SUBDIRECTORY(imageFilter)
   #ADD_SUBDIRECTORY(networkClient)
   #ADD_SUBDIRECTORY(networkServer)
   #ne compile plusADD_SUBDIRECTORY( SDI )
   #ADD_SUBDIRECTORY( qtableTest )
ENDIF( PROTOTYPES_BUILDOPTION )