#PROTOTYPES CMAKELISTS

IF( PROTOTYPES_BUILDOPTION )
   #ADD_SUBDIRECTORY( bezierCurve )
   #ADD_SUBDIRECTORY( command )
   #ne compile plus a cause de chipmunk ADD_SUBDIRECTORY(pong)
   #ADD_SUBDIRECTORY(shader)
   #ADD_SUBDIRECTORY(rayCasting)
   #ADD_SUBDIRECTORY(frameBuffer)
   #ADD_SUBDIRECTORY(genese)
   #ADD_SUBDIRECTORY(particuleSystem)
   #ADD_SUBDIRECTORY(particuleSystem2)
   #ADD_SUBDIRECTORY(polygones)
   #ADD_SUBDIRECTORY(imageFilter)
   ADD_SUBDIRECTORY(networkClient)
   ADD_SUBDIRECTORY(networkServer)
   #ne compile plusADD_SUBDIRECTORY( SDI )
   #ADD_SUBDIRECTORY( spaceTime )
   #ADD_SUBDIRECTORY( qtableTest )
ENDIF( PROTOTYPES_BUILDOPTION )